20000731-09:00 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * source/macro/Makefile
     + added macroslx.c compilation instead of flex lexer if HB_LEX is set to SIMPLEX
   * source/macro/macroslx.c
     + added relative path in include commands to let gcc find correct files

2000-07-30 22:50 UTC+0800 Ron Pinkas <ron@profit-master.com>
  * source/macro/macro.slx
    ! Corrected unreleased memory block.

  * source/compiler/harbour.slx
    ! Corrected unreleased memory block.

2000-07-30 21:15 UTC+0800 Ron Pinkas <ron@profit-master.com>
  * source/compiler/harbour.slx
    - Removed unneeded comment.

  * source/compiler/simplex.c
    * Changed void yy_bytes_buffer() to void *.

2000-07-31 00:10 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>

*contrib/hbzlib/zipfile2.c
    *some Enhacementes
+contrib/hbzlib/zipfile.c
+contrib/hbzlic/zlibapi1.c
    *Re added as diferent name
    *hb___CheckFile() bug fixed
*contrib/hbzlib/makefile.bc
    *updated to reflect the new files names


2000-07-30 17:30 UTC+0800 Ron Pinkas <ron@profit-master.com>
  + source/macro/macro.slx
  + source/macro/macroslx.c
    + Added SimpLex based macro lexer

  * hb_slex.bc
    * Modified to use SimpLex based macro support.
    /* Could some one please add same to GNU make system? */

  * source/compiler/simplex.c
    * Added void yy_bytes_buffer()

2000-07-30 12:45 UTC+0800 Ron Pinkas <ron@profit-master.com>
  * source/compiler/harbour.slx
    - Removed AS CHARACTER, AS BOOLEAN, AS OBJ, AS NUM
      /* Left AS VARIANT and AS USUAL until vote results tabulated. */

  * utils/hbdoc/ft_funcs.prg
    * Changed AS CHAR -> AS STRING and AS NUM to AS NUMERIC

  * source/compiler/simplex.c
    * Changed to use YY_DECL macro in declaration of yylex()

2000-07-30 14:32 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * source/compiler/harbour.l
   * source/compiler/hbpcode.c
   * tests/testdecl.prg
   * tests/testwarn.prg
   * contrib/hbclip/hbclip.ch